--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -82,13 +82,13 @@
                         <strong>Recent</strong>
                         <ul class="item-list">
                             {% for wlv in user|get_workbooks_this_user|slice:':5' %}
-                            <li class="menu-item"><a href="{% url 'workbook_detail' wlv.id %}">{{ wlv.name|shorter }}</a></li>
+                            <li class="menu-item"><a href="{% url 'workbook_detail' wlv.id %}">{{ wlv.name }}</a></li>
                             {% endfor %}
                             {% if user|get_workbooks_this_user|length > 5 %}
                             <li class="menu-item has-drop-down__more"> More
                                 <ul class="drop">
                                     {% for wlv in user|get_workbooks_this_user|slice:'5:' %}
-                                    <li class="menu-item"><a href="{% url 'workbook_detail' wlv.id %}">{{ wlv.name|shorter }}</a></li>
+                                    <li class="menu-item"><a href="{% url 'workbook_detail' wlv.id %}">{{ wlv.name }}</a></li>
                                     {% endfor %}
                                 </ul>
                             </li>
@@ -119,7 +119,7 @@
                                 <form action="{% url 'worksheet_create_with_projects' %}" method="POST">
                                     {% csrf_token %}
                                     <input type="hidden" name="project_id" value="{{ plv.id }}">
-                                    <button type="submit">{{ plv.name|shorter }}</button>
+                                    <button type="submit">{{ plv.name }}</button>
                                 </form>
                             </li>
                             {% endfor %}
@@ -131,7 +131,7 @@
                                         <form action="{% url 'worksheet_create_with_projects' %}">
                                             {% csrf_token %}
                                             <input type="hidden" name="project_id" value="{{ plv.id }}">
-                                            <button type="submit">{{ plv.name|shorter }}</button>
+                                            <button type="submit">{{ plv.name }}</button>
                                         </form>
                                     </li>
                                     {% endfor %}
@@ -219,7 +219,7 @@
                                 <form action="{% url 'worksheet_create_with_genes' %}" method="POST">
                                     {% csrf_token %}
                                     <input type="hidden" name="gene_list_id" value="{{ gflv.id }}">
-                                    <button type="submit">{{ gflv.name|shorter }}</button>
+                                    <button type="submit">{{ gflv.name }}</button>
                                 </form>
                             </li>
                             {% endfor %}
@@ -231,7 +231,7 @@
                                         <form action="{% url 'worksheet_create_with_genes' %}">
                                             {% csrf_token %}
                                             <input type="hidden" name="gene_list_id" value="{{ gflv.id }}">
-                                            <button type="submit">{{ gflv.name|shorter }}</button>
+                                            <button type="submit">{{ gflv.name }}</button>
                                         </form>
                                     {% endfor %}
                                 </ul>
@@ -258,7 +258,7 @@
                                 <form action="{% url 'worksheet_create_with_variables' %}" method="POST">
                                     {% csrf_token %}
                                     <input type="hidden" name="variable_list_id" value="{{ vflv.id }}">
-                                    <button type="submit">{{ vflv.name|shorter }}</button>
+                                    <button type="submit">{{ vflv.name }}</button>
                                 </form>
                             </li>
                             {% endfor %}
@@ -270,7 +270,7 @@
                                         <form action="{% url 'worksheet_create_with_variables' %}" method="POST">
                                             {% csrf_token %}
                                             <input type="hidden" name="variable_list_id" value="{{ vflv.id }}">
-                                            <button type="submit">{{ vflv.name|shorter }}</button>
+                                            <button type="submit">{{ vflv.name }}</button>
                                         </form>
                                     </li>
                                     {% endfor %}
@@ -297,7 +297,7 @@
                                 <form action="{% url 'worksheet_create_with_cohort' %}" method="POST">
                                     {% csrf_token %}
                                     <input type="hidden" name="cohort_id" value="{{ clv.id}}">
-                                    <button type="submit">{{ clv.name|shorter }}</button>
+                                    <button type="submit">{{ clv.name }}</button>
                                 </form>
                             </li>
                             {% endfor %}
@@ -309,7 +309,7 @@
                                         <form action="{% url 'worksheet_create_with_cohort' %}" method="POST">
                                             {% csrf_token %}
                                             <input type="hidden" name="cohort_id" value="{{ clv.id}}">
-                                            <button type="submit">{{ clv.name|shorter }}</button>
+                                            <button type="submit">{{ clv.name }}</button>
                                         </form>
                                     </li>
                                     {% endfor %}
