-> Adjusted count spans on the filter panel so they'll flow more consistently with long filter value names

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -24,6 +24,8 @@
                     border-top-left-radius: 3px
                 &:last-child a
                     border-top-right-radius: 3px
+                span
+                    margin-left: 10px
 
         .tab-content
             padding: 0px
