-> Set all Cohort, Gene, Variable, Workbook, and Project names in the subnav to single line and trunacte with ellipsis -> Set Cohort, Gene, and Variable list entries on the Dashboard to single line and trunacte with ellipsis -> Cohort, Gene, Variable, Workbook, and Project names are available as wrapped text in the title attribute

--- a/blink_sass/components/_nav.sass
+++ b/blink_sass/components/_nav.sass
@@ -58,6 +58,9 @@
       overflow: hidden
       text-overflow: ellipsis
       white-space: nowrap
+    .item-list li a
+      width: 100%
+      display: inline-block
 
   &.has-drop-down
     > .drop
