--- a/blink_sass/pages/_dashboard.sass
+++ b/blink_sass/pages/_dashboard.sass
@@ -4,3 +4,9 @@
     margin: 0 1.5%
     float: left
     text-align: center
+
+.table-list li .list-main
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: nowrap
+    padding-right: 10px
