--- a/blink_sass/basic.sass
+++ b/blink_sass/basic.sass
@@ -98,8 +98,17 @@ nav
     padding-bottom: 15px
 
 
+/********************************************
+ * Class to hide labels for screen readers
+ *******************************************/
 
-
+.hidden-label
+    position: absolute
+    left: -10000px
+    top: auto
+    width: 1px
+    height: 1px
+    overflow: hidden
 
 
 /********************************************
