--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -15,6 +15,9 @@
             border-top-color: transparent
             box-shadow: $box-shadow
         ul.nav-tabs
+            li.active
+                a
+                    color: darken($isb-warning, 20%)
             li
                 border: none
                 background-color: #fff
