--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -30,19 +30,19 @@
             <ul>
                 <div class="clearfix">
                     <li class="item">
-                        <img class="img-fluid" src="{% static 'img/barchart.png' %}">
+                        <img class="img-fluid" alt="Bar Chart plot Example" src="{% static 'img/barchart.png' %}">
                         <p>Bar Chart</p>
                     </li>
                     <li class="item">
-                        <img class="img-fluid" src="{% static 'img/histogram.png' %}">
+                        <img class="img-fluid" alt="Histogram Plot Example" src="{% static 'img/histogram.png' %}">
                         <p>Histogram</p>
                     </li>
                     <li class="item">
-                        <img class="img-fluid" src="{% static 'img/scatterplot.png' %}">
+                        <img class="img-fluid" alt="Scatter Plot Example" src="{% static 'img/scatterplot.png' %}">
                         <p>Scatter Plot</p>
                     </li>
                     <li class="item">
-                        <img class="img-fluid" src="{% static 'img/violinplot.png' %}">
+                        <img class="img-fluid" alt="Violin Plot Example" src="{% static 'img/violinplot.png' %}">
                         <p>Violin Plot</p>
                     </li>
                 </div>
@@ -50,15 +50,15 @@
 
                 <div class="collapse clearfix" id="more-analysis">
                     <li class="item">
-                        <img class="img-fluid" src="{% static 'img/violinplot.png' %}">
+                        <img class="img-fluid" alt="Alternate Violin Plot Example" src="{% static 'img/violinplot.png' %}">
                         <p>Violin Plot 2</p>
                     </li>
                     <li class="item">
-                        <img class="img-fluid" src="{% static 'img/cubbyhole.png' %}">
+                        <img class="img-fluid" alt="Cubby Hole Example" src="{% static 'img/cubbyhole.png' %}">
                         <p>Cubby Hole</p>
                     </li>
                     <li class="item">
-                        <img class="img-fluid" src="{% static 'img/seqpeak.png' %}" alt="">
+                        <img class="img-fluid" alt="SeqPeak Example" src="{% static 'img/seqpeak.png' %}" alt="">
                         <p>SeqPeak</p>
                     </li>
                 </div>
