--- a/blink_sass/components/_nav.sass
+++ b/blink_sass/components/_nav.sass
@@ -37,7 +37,7 @@
     font-weight: $medium-font-weight
 
     &:hover
-      background: lighten($isb-dark, 10%)
+      background: $isb-dark
 
 .menu-item
   position: relative
@@ -53,7 +53,7 @@
       &:last-child
         border-bottom: none
     .item-list li:hover
-      background: $isb-dark
+      background: darken($isb-dark, 10%)
     .item-list li button,a
       overflow: hidden
       text-overflow: ellipsis
@@ -66,7 +66,7 @@
     > .drop
       display: none
       position: absolute
-      background: lighten($isb-dark, 10%)
+      background: $isb-dark
       top: 100%
       left: 0
     &:hover > .drop
@@ -86,11 +86,11 @@
         left: 100%
         top: -10px
         padding: 10px
-        background: $isb-dark
+        background: darken($isb-dark, 10%)
         width: 250px
 
         li:hover
-          background: lighten($isb-dark, 10%)
+          background: $isb-dark
       &:hover > .drop
         display: block
 
