--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -33,7 +33,8 @@
         <li><a href="{% url 'cohort_list' %}">Saved Cohorts</a></li>
     </ol>
     <h1 class="page-header">{{ cohort.name }} </h1>
-    <input id="edit-cohort-name" type="text" name="cohort-name" value="{{ cohort.name }}" class="form-control input-lg space-top-15" style="display: none"/>
+    <label id="cohort-name-label" for="edit-cohort-name" class="hidden-label">Cohort Name:</label>
+    <input id="edit-cohort-name" type="text" name="cohort-name" value="{{ cohort.name }}" class="form-control input-lg space-top-15" style="display: none" aria-labelledby="cohort-name-label"/>
     <div class="page-action-group">
 
         <ul id="default-cohort-menu">
@@ -90,7 +91,7 @@
             </ul>
             <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="clinical-filters">
-                    <ul class="list-group" id="clin-accordion" role="tablist" aria-multiselectable="true">
+                    <ul class="list-group" id="clin-accordion" role="tablist">
                         {% for attr in clin_attr %}
                             {% if attr_list_count|list_contains_name:attr %}
                                 <li class="list-group-item">
@@ -346,7 +347,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title"></h4>
+                    <h4 class="modal-title">Cohort Sharing</h4>
                     <ul class="nav nav-tabs" role="tablist">
                         {% if cohort.perm.perm == 'OWNER' %}
                             <li role="presentation" class="active"><a data-target="#share-cohort-pane" data-toggle="tab" aria-controls="home" role="tab" id="shareCohortModal">Share Cohort</a></li>
@@ -465,8 +466,8 @@
                 </div>
                 <form id="delete-cohort-form" method="POST" action="{% url 'delete_cohort' %}">
                     <div class="modal-body">
-                        <label for="cohort-name">Are you sure you want to delete this cohort?</label>
-                        <input type="hidden" id="cohort-id" name="id" value="{{ cohort.id }}"/>
+                        <label id="delete-confirm-label" for="cohort-id">Are you sure you want to delete this cohort?</label>
+                        <input type="hidden" id="cohort-id" name="id" value="{{ cohort.id }}" aria-labelledby="delete-confirm-label"/>
                     </div>
                     <div class="modal-footer">
                         {% csrf_token %}
