--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -259,7 +259,7 @@
                             <input class="form-control" type="text" id="cohort-name" name="name" required />
                         </div>
                         <div class="form-group">
-                            <label for="filters">Selected Filters:</label>
+                            <h5>Selected Filters:</h5>
                             <p class="form-control-static"></p>
                         </div>
                     </div>
