--- a/templates/GenespotRE/register_gcp.html
+++ b/templates/GenespotRE/register_gcp.html
@@ -48,7 +48,7 @@
                             <label for="verify-gcp-id">Please enter your Google Cloud Project ID: </label>
                             <input id="verify-gcp-id" name="gcp-id" type="text" class="form-control" placeholder="Google Cloud Project ID" required="required"/>
                         </li>
-                        <li>Go to your Google Cloud Project.</li>
+                        <li>Go to your <a href="https://console.cloud.google.com/home/dashboard" target="_blank">Google Cloud Project</a>.</li>
                         <li>Select the hamburger menu in the top left corner.</li>
                         <li>Select IAM & Admin</li>
                         <li>Click +Add Member</li>
@@ -77,75 +77,8 @@
                 <input class="btn btn-primary" type="submit" value="Register"/>
                 {% csrf_token %}
             </form>
-{#            <ul>#}
-{#                <li>#}
-{#                    Please add this service account as a [VIEWER?] on your Google Cloud Project: [ISB-CGC SERVICE ACCOUNT]#}
-{#                </li>#}
-{#                <li>#}
-{#                    <form id="verify-sa" method="POST" action="{% url 'verify_sa' user.id %}">#}
-{#                        {% csrf_token %}#}
-{#                        Once done, please enter the service account you'd like to register to this Google Cloud Project.#}
-{##}
-{#                        <input type="text" name="user_sa" placeholder="Enter Service Account" class="form-control"required/>#}
-{#                        <br>#}
-{#                        Are you going to use this service account to access controlled access? If so, which dataset?#}
-{#                        <select name="dataset" multiple="multiple" class="form-control">#}
-{#                            {% for dataset in authorized_datasets %}#}
-{#                                <option value="{{ dataset.id }}">{{ dataset.name }}</option>#}
-{#                            {% endfor %}#}
-{#                        </select>#}
-{##}
-{#                        <input type="hidden" name="gcp_id" value="{{ gcp_id }}"/>#}
-{##}
-{#                        Click this <input type="submit" class="verify-sa-btn" value="button"/> to allow us to verify who is allowed to use this service account.#}
-{#                    </form>#}
-{#                    <i class="fa fa-spinner fa-spin hidden load-spinner"></i>#}
-{#                </li>#}
-{#                <li>#}
-{#                    Finish#}
-{#                </li>#}
-{#            </ul>#}
         </div>
     </div>
-
-    <!-- Modals -->
-{##}
-{#    <div class="modal fade" id="add-cloud-project" tabindex="-1" role="dialog" aria-labelledby="AddCloudProject" aria-hidden="true">#}
-{#        <div class="modal-dialog">#}
-{#            <div class="modal-content">#}
-{#                <div class="modal-header">#}
-{#                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>#}
-{#                    <h4 class="modal-title" id="add-gcp-header">Link Google Cloud Project</h4>#}
-{#                </div>#}
-{#                <form id="add-gcp" method="POST" action="{% url 'register_gcp' user.id %}" class="form-horizontal">#}
-{#                    <div class="modal-body">#}
-{#                        <div class="form-group">#}
-{#                            <label for="name" class="control-label col-sm-3">Name (Required)</label>#}
-{#                            <div class="col-sm-9">#}
-{#                                <input type="text" class="form-control" name="project_name" id="name" placeholder="Project Name" required />#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <div class="form-group">#}
-{#                            <label for="project-id" class="control-label col-sm-3">Project ID (Required)</label>#}
-{#                            <div class="col-sm-9">#}
-{#                                <input type="text" class="form-control" name="project_id" id="project-id" placeholder="Project Id" required />#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <div class="form-group">#}
-{#                            <label for="project-dataset" class="control-label col-sm-3">Big Query Dataset (Optional)</label>#}
-{#                            <div class="col-sm-9">#}
-{#                                <input type="text" class="form-control" name="bq_dataset" id="project-dataset" placeholder="Project Name" />#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                    <div class="modal-footer">#}
-{#                        {% csrf_token %}#}
-{#                        <input type="submit" value="Register" class="btn btn-primary" />#}
-{#                    </div>#}
-{#                </form>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
 {% endblock %}
 
 {% block js_file %}{% static 'js/register_gcp.js' %}{% endblock %}
