--- a/blink_sass/pages/_page.sass
+++ b/blink_sass/pages/_page.sass
@@ -44,3 +44,8 @@
 #genes_list, #variable_list
   .panel-body
     margin-bottom: 50px
+
+ul.nav-tabs
+    li.active
+        a
+          color: darken($isb-warning, 20%) !important
