-> Adjusted contrast on isb-warning further

--- a/blink_sass/components/_tab.sass
+++ b/blink_sass/components/_tab.sass
@@ -116,14 +116,14 @@
                 display: block
             > a
                 border-bottom: none
-                color: darken($isb-warning, 20%)
+                color: $isb-warning
                 background: $white
             .dropdown
                 display: inline-block
                 vertical-align: top
                 padding: 8px 0px
                 &> a
-                    color: darken($isb-warning, 20%)
+                    color: $isb-warning
                     display: inline-block
                     &[aria-expanded="true"]
                         background-color: darken($white, 10%)
