--- a/blink_sass/variables.sass
+++ b/blink_sass/variables.sass
@@ -17,7 +17,7 @@ $isb-primary: #2A537A
 $isb-lighter: #4CC2D6
 $isb-info:    #2B7388
 $isb-success: #C9DD03
-$isb-warning: #F7991B
+$isb-warning: darken(#F7991B, 20%)
 $isb-danger:  #BB00BB
 $isb-dark:    #676767
 
