--- a/blink_sass/_button.sass
+++ b/blink_sass/_button.sass
@@ -24,12 +24,12 @@
 
 .btn-default
     color: $white !important
-    background-color: darken($isb-warning, 20%) !important
-    border: 1px solid darken($isb-warning, 28%) !important
+    background-color: $isb-warning
+    border: 1px solid darken($isb-warning, 8%) !important
     &:hover, &:active, &:focus
-        background-color: darken($isb-warning, 28%) !important
+        background-color: darken($isb-warning, 8%) !important
         color: $white !important
-        border: 1px solid $isb-warning !important
+        border: 1px solid lighten($isb-warning,20%) !important
 
 .btn-link
   font-weight: $regular-font-weight
