-> Changed all btn-default to btn-primary -> Put isb-warning back to original color

--- a/templates/GenespotRE/user_landing.html
+++ b/templates/GenespotRE/user_landing.html
@@ -239,7 +239,7 @@
 
                         {% csrf_token %}
                         {% if cohorts %}
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                             <input type="submit" value="Create Visualization" class="btn btn-primary" />
                         {% else %}
                             <button type="button" class="btn btn-primary" data-dismiss="modal">Okay</button>
@@ -312,7 +312,7 @@
                     </div>
                     <div class="modal-footer">
                         {% csrf_token %}
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                         <button type="submit" class="btn btn-primary">Okay</button>
                     </div>
                 </form>
@@ -335,7 +335,7 @@
                     </div>
                     <div class="modal-footer">
                         {% csrf_token %}
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                         <input type="submit" value="Delete" class="btn btn-primary" />
                     </div>
                 </form>
@@ -385,7 +385,7 @@
                     </div>
                     <div class="modal-footer">
                         {% csrf_token %}
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                         <input type="submit" value="Delete Visualization" class="btn btn-primary" />
                     </div>
                 </form>
