--- a/templates/projects/project_upload.html
+++ b/templates/projects/project_upload.html
@@ -101,7 +101,7 @@
                             <a href="#">View example</a></p>
                     </div>
                     <div id="data-upload-forms">
-                        <button type="button" class="upload-file-button btn btn-default">Select File(s)</button>
+                        <button type="button" class="upload-file-button btn btn-primary">Select File(s)</button>
                         <input type="file" class="hidden upload-file-field" multiple>
                         <table class="table table-striped" id="file-list-table">
                             <tr>
@@ -132,7 +132,7 @@
             <p>Please refer to the <a href="">system data dictionary</a> for proper naming and data type conventions.</p>
         </div>
         <div class="panel-footer">
-            <button class="btn btn-default" id="back-button"><i class="fa fa-chevron-left"></i> Back</button>
+            <button class="btn btn-primary" id="back-button"><i class="fa fa-chevron-left"></i> Back</button>
             <button class="btn btn-primary" id="upload-button"><i class="fa fa-cloud-upload"></i> Upload Data</button>
             <span class="hidden progress-message"><i class="fa fa-spin fa-circle-o-notch"></i> Uploading</span>
         </div>
