--- a/templates/visualizations/stackviz.html
+++ b/templates/visualizations/stackviz.html
@@ -57,8 +57,8 @@
         <h5 class="selected-points-count">Total Number of Samples Selected: 0</h5>
         <div class="select-toggle">
             <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default active" value="selection">Selection</button>
-                <button type="button" class="btn btn-default" value="moving">Move Plot</button>
+                <button type="button" class="btn btn-primary active" value="selection">Selection</button>
+                <button type="button" class="btn btn-primary" value="moving">Move Plot</button>
             </div>
         </div>
         <div class="plot-div"></div>
