--- a/templates/GenespotRE/user_detail.html
+++ b/templates/GenespotRE/user_detail.html
@@ -133,9 +133,9 @@
 {#                            <label for="credits" class="col-sm-3 control-label">Credits Requested</label>#}
 {#                            <div class="col-sm-9">#}
 {#                                <div class="btn-group" role="group">#}
-{#                                    <button type="button" class="btn btn-default" value="1000">$1000</button>#}
-{#                                    <button type="button" class="btn btn-default" value="2000">$2000</button>#}
-{#                                    <button type="button" class="btn btn-default" value="5000">$5000</button>#}
+{#                                    <button type="button" class="btn btn-primary" value="1000">$1000</button>#}
+{#                                    <button type="button" class="btn btn-primary" value="2000">$2000</button>#}
+{#                                    <button type="button" class="btn btn-primary" value="5000">$5000</button>#}
 {#                                </div>#}
 {#                                <input type="hidden" name="credits" value=""/>#}
 {#                            </div>#}
@@ -148,7 +148,7 @@
 {#                        </div>#}
 {#                    </div>#}
 {#                    <div class="modal-footer">#}
-{#                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>#}
+{#                        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>#}
 {#                        {% csrf_token %}#}
 {#                        <input type="submit" value="Submit Request" class="btn btn-primary" />#}
 {#                    </div>#}
