--- a/templates/base.html
+++ b/templates/base.html
@@ -107,7 +107,7 @@
                     <p>Are you sure you want to sign out?</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                     {% csrf_token %}
                     {% if redirect_field_value %}
                         <input type="hidden" name="{{redirect_field_name}}" value="{{redirect_field_value}}"/>
