--- a/templates/cohorts/cohort_filelist.html
+++ b/templates/cohorts/cohort_filelist.html
@@ -91,8 +91,8 @@
                         {% csrf_token %}
                         <p>Showing 20 files of <span class="file-count">unknown</span>. Page: <span class="page-num">1</span></p>
                         <div>
-                            <a role="button" id="prev-page" class="btn btn-default disabled">Previous Page</a>
-                            <a role="button" id="next-page" class="btn btn-default">Next Page</a>
+                            <a role="button" id="prev-page" class="btn btn-primary disabled">Previous Page</a>
+                            <a role="button" id="next-page" class="btn btn-primary">Next Page</a>
                             <span class="spinner"><i class="fa fa-spin fa-spinner hidden"></i></span>
                         </div>
 
