--- a/templates/variables/variable_detail.html
+++ b/templates/variables/variable_detail.html
@@ -43,12 +43,12 @@
                     {% endif %}
                     <li role="menuitem">
                         {% if not workbook %}
-                            <a data-toggle="modal" data-target="#new-favorite-workbook-modal" class="btn btn-default">Apply to New Workbook</a>
+                            <a data-toggle="modal" data-target="#new-favorite-workbook-modal" class="btn btn-primary">Apply to New Workbook</a>
                         {% else %}
                             <form action="{% url 'worksheet_variables_edit' workbook.id worksheet.id %}" method="POST">
                                 {% csrf_token %}
                                 <input type="hidden" name="variable_list_id" value="{{ variables.id }}">
-                                <button class="btn btn-default" type="submit"><i class="fa fa-plus"></i>Apply to Worksheet</button>
+                                <button class="btn btn-primary" type="submit"><i class="fa fa-plus"></i>Apply to Worksheet</button>
                                 <a class="btn btn-info"  href="{% url 'variable_select_for_existing_workbook' workbook.id worksheet.id %}">Back</a>
                             </form>
                         {% endif %}
