--- a/templates/visualizations/genericplot.html
+++ b/templates/visualizations/genericplot.html
@@ -92,7 +92,7 @@
                     </div>
                     <div class="modal-footer">
                         {% csrf_token %}
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
 {#                        {% if viz and viz.user.id != request.user.id %}#}
 {#                            <input type="submit" value="Clone Visualization" class="btn btn-primary" />#}
 {#                        {% else %}#}
