-> More CSS tweaking

--- a/blink_sass/pages/_page.sass
+++ b/blink_sass/pages/_page.sass
@@ -45,3 +45,7 @@
   .panel-body
     margin-bottom: 50px
 
+ul.nav-tabs
+    li.active
+        a
+          color: darken($isb-warning, 20%) !important
