--- a/templates/GenespotRE/css_test.html
+++ b/templates/GenespotRE/css_test.html
@@ -34,7 +34,7 @@
     <div class="container">
         <h2 class="page-header">Buttons</h2>
         <div class="space-bottom-10">
-            <button type="button" class="btn bmi">Default</button>
+            <button type="button" class="btn btn-default">Default</button>
             <button type="button" class="btn btn-primary">Primary</button>
             <button type="button" class="btn btn-info">Info</button>
             <button type="button" class="btn btn-warning">Warning</button>
