-> Added Cohort ID to Cohort Details panel -> Adjusted 'name' table column CSS so its max width is 600px (prevents the date column from wrapping) -> Dashboard link will only be in the navbar if the user is authenticated

--- a/blink_sass/components/_table.sass
+++ b/blink_sass/components/_table.sass
@@ -5,6 +5,9 @@
   a
     color: $base-dark
     font-weight: $medium-font-weight
+
+  .name-col
+    max-width: 600px
     
 .share-col a
   color: $isb-info
