--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -243,6 +243,9 @@
             </div>
             <div class="panel-body">
                 <div class="row col-md-12 space-bottom-10">
+                    <span>Internal ISB-CGC Cohort ID: {{ cohort.id }}</span>
+                </div>
+                <div class="row col-md-12 space-bottom-10">
                     <span class="detail-label">Total Number of Samples:</span>
                     <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
                     <span class="total-values" id="total-samples">{{ total_samples }}</span>
