--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -10,17 +10,12 @@
             <div class="col-lg-12">
             <div class="nav navbar-left">
                  <ul class="">
-                     {% if user.is_authenticated %}
-                        <li class="navbar-item"> <a href="{% url 'dashboard' %}"><img class="navbar-brand" src="{% static 'img/isblogo.png' %}" alt="ISB Logo"/><span class="navbar-item">ISB-CGC</span></a></li>
-                     {% else %}
-                        <li class="navbar-item"> <a href="{% url 'landing_page' %}"><img class="navbar-brand" src="{% static 'img/isblogo.png' %}" alt="ISB Logo"/><span class="navbar-item">ISB-CGC</span></a></li>
-                     {% endif %}
-
-                    <li class="navbar-link navbar-item"><a href="{% url 'landing_page' %}">About Us</a></li>
-                    <li class="navbar-link navbar-item">
-                        <a href="http://isb-cancer-genomics-cloud.readthedocs.org/en/latest/" target="_blank">Documentation</a>
-                    </li>
-                    <li class="navbar-link navbar-item">
+                     <li class="navbar-item"> <a href="{% url 'landing_page' %}"><img class="navbar-brand" src="{% static 'img/isblogo.png' %}" alt="ISB Logo"/><span class="navbar-item">ISB-CGC</span></a></li>
+                     <li class="navbar-link navbar-item"><a href="{% url 'landing_page' %}">About Us</a></li>
+                     <li class="navbar-link navbar-item">
+                         <a href="http://isb-cancer-genomics-cloud.readthedocs.org/en/latest/" target="_blank">Documentation</a>
+                     </li>
+                     <li class="navbar-link navbar-item">
                         <div class="dropdown">
                             <a role="button class=dropdown-toggle navbar-item__text" id="help-dropdown" data-toggle="dropdown" aria-label="Help Dropdown" aria-expanded="true">
                                 Feedback <i class="fa fa-caret-down"></i>
@@ -71,9 +66,11 @@
     {% if user.is_authenticated %}
     <nav class="nav subnav collapse" role="navigation" id="subnav">
         <ul class="container">
+            {% if user.is_authenticated %}
             <li>
-                <a href="/dashboard">DASHBOARD</a>
+                <a href="{% url 'dashboard' %}">DASHBOARD</a>
             </li>
+            {%  endif %}
             <li class="menu-item has-drop-down">
                 <a>WORKBOOKS <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
