--- a/templates/GenespotRE/register_sa.html
+++ b/templates/GenespotRE/register_sa.html
@@ -24,8 +24,8 @@
 
 {% endblock %}
 
-{% block link_page_name %}user-gcp-list{% endblock %}
-{% block page_name %}user-gcp-list{% endblock %}
+{% block link_page_name %}user-register-sa{% endblock %}
+{% block page_name %}user-register-sa{% endblock %}
 
 {% block page_header %}
     <div class="container">
@@ -46,26 +46,26 @@
                         <input id="user_sa"type="text" name="user_sa" placeholder="Enter Service Account" class="form-control" required/>
                         <br>
                         Are you going to use this service account to access controlled access? If so, which dataset?
-                        <select name="dataset" multiple="multiple" class="form-control">
+                        <select name="datasets" multiple="multiple" class="form-control">
                             {% for dataset in authorized_datasets %}
                                 <option value="{{ dataset.id }}">{{ dataset.name }}</option>
                             {% endfor %}
                         </select>
 
                         <input type="hidden" name="gcp_id" value="{{ gcp_id }}"/>
-
+                        <br>
                         Click this <input type="submit" class="verify-sa-btn" value="button"/> to allow us to verify who is allowed to use this service account.
                     </form>
                     <i class="fa fa-spinner fa-spin hidden load-spinner"></i>
                 </li>
                 <li>
                     <div class="user-verification" style="display:none;">
-                        <table>
+                        <table class="table">
                             <thead>
                             <tr>
                                 <th>User Email</th>
                                 <th>Registered</th>
-                                <th>Verified dbGaP</th>
+                                <th>Has eRA Commons</th>
                                 <th>Authorized Datasets</th>
                             </tr>
                             </thead>
@@ -76,7 +76,17 @@
                     </div>
                 </li>
                 <li>
-                    Finish
+                    <div class="cannot-register" style="display: none;">
+                        <p>Some of your users do not have access to the datasets you would like to use. Please try again when they have the proper permissions.</p>
+                    </div>
+                    <div class="register-sa-div" style="display: none;">
+                        <form id="register-sa" method="POST" action="{% url 'register_sa' user.id %}">
+                            {% csrf_token %}
+                            <p>We have verified that all of the users in your Google Cloud Project have permission to access the proposed datasets.</p>
+                            <input type="hidden" name="gcp_id" value="{{ gcp_id }}"/>
+                            <input type="submit" class="register-sa-btn" value="Register" />
+                        </form>
+                    </div>
                 </li>
             </ul>
         </div>
